syntax = "proto3";

option java_multiple_files = true;
option java_package = "common_lib.grpc";
option java_outer_classname = "PaymentsProto";

package payments;

service PaymentsService {
  rpc CreateAccount(CreateAccountRequest) returns (CreateAccountResponse);
  rpc Deposit(DepositRequest) returns (AccountBalance);
  rpc GetAccountBalance(GetAccountBalanceRequest) returns (AccountBalance);
}

message CreateAccountRequest {
  uint32 user_id = 1;
}

message CreateAccountResponse {
  bool created = 1;
}

message DepositRequest {
  uint32 user_id = 1;
  uint32 amount = 2;
}

message GetAccountBalanceRequest {
  uint32 user_id = 1;
}

message AccountBalance {
  uint32 balance = 1;
}